1.2.5i4:
    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0619 adva_fsp_temp: new check to monitor temperature and temperature trends on ADVA scalable optical transport solutions
    * 0993 raritan_pdu_inlet: now delivers performance data
    * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...
    * 0936 FIX: agent_ibmsvc: improved error messages on using wrong credentials
    * 0621 FIX: zfsget: better filesystem selection and calculation of sizes...
    * 0819 FIX: Fixed keepalive termination in case of exceptions during checking...
    * 0622 FIX: cisco_temp_sensor: fix to also work with newer IOS versions
    * 0623 FIX: fsc_fans: upper levels for fan RPMs are now optional also for the check

    Multisite:
    * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...
    * 0166 FIX: mobile gui: Fixed colors of command list...
    * 0820 FIX: Fixed wrong NagVis links in "custom links" snapin
    * 0938 FIX: logwatch: fixed incorrect display of warning messages
    * 0939 FIX: Fixed multisite exception caused by missing explanation text for a AUTODELETE event action

    WATO:
    * 0987 New button for updating DNS cache...
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...