@@ -1,4 +1,7 @@
 1.2.5i4:
+    Core & Setup:
+    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...
+
     Checks & Agents:
     * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
     * 0986 citrix_licenses: new check for monitoring Citrix licenses
